# ml-inference-server-rust

./: .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml
config/: default.toml  development.toml  models.toml  production.toml  test.toml
src/: lib.rs  main.rs
src/application/: mod.rs  services.rs  use_cases.rs
src/domain/: entities.rs  errors.rs  mod.rs  traits.rs
src/infrastructure/: config.rs  mod.rs  model_loader.rs  sentence_transformer.rs
src/presentation/: api.rs  mod.rs  server.rs
