[package]
name = "inference"
version = "0.1.0"
edition = "2021"

[dependencies]
candle-core = "0.8"
candle-nn = "0.8"
candle-transformers = "0.8"
hf-hub = { version = "0.4", features = ["tokio"] }
tokenizers = "0.20"
tokio = { version = "1.0", features = ["full"] }
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }
hyper = { version = "1.0", features = ["full"] }
config = "0.14"

[features]
default = []
cuda = ["candle-core/cuda"]
mkl = ["candle-core/mkl"]
metal = ["candle-core/metal"]
accelerate = ["candle-core/accelerate"]
